--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <section class="works" id="works">
     <ul>
       <li>
-        <a href="https://vsenatorrent.github.io/space/ ">
+        <a href="https://vsenatorrent.github.io/space/">
           <img src="img/w1.png" alt="work1">
           <div class="modal">
             <span class="name">Space Exploration</span>
@@ -113,7 +113,7 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="https://vsenatorrent.github.io/gustoso/">
           <img src="img/w2.png" alt="work2">
           <div class="modal">
             <span class="name">Pastry</span>
