--- a/space/index.html
+++ b/space/index.html
@@ -9,9 +9,9 @@
   <meta charset="UTF-8">
   <title>Space Exploration</title>
   <meta name="description" content="">
-  
+   
     <!-- Fonts Loader from _fonts.css (HTML5 LocalStorage) -->
-  <script>!function(){function e(e,t,n){e.addEventListener?e.addEventListener(t,n,!1):e.attachEvent&&e.attachEvent("on"+t,n)}function t(e){return window.localStorage&&localStorage.font_css_cache&&localStorage.font_css_cache_file===e}function n(){if(window.localStorage&&window.XMLHttpRequest)if(t(o))a(localStorage.font_css_cache);else{var n=new XMLHttpRequest;n.open("GET",o,!0),e(n,"load",function(){4===n.readyState&&(a(n.responseText),localStorage.font_css_cache=n.responseText,localStorage.font_css_cache_file=o)}),n.send()}else{var c=document.createElement("link");c.href=o,c.rel="stylesheet",c.type="text/css",document.getElementsByTagName("head")[0].appendChild(c),document.cookie="font_css_cache"}}function a(e){var t=document.createElement("style");t.innerHTML=e,document.getElementsByTagName("head")[0].appendChild(t)}var o="css/_fonts.css";window.localStorage&&localStorage.font_css_cache||document.cookie.indexOf("font_css_cache")>-1?n():e(window,"load",n)}();</script>
+  <script>!function(){function e(e,t,n){e.addEventListener?e.addEventListener(t,n,!1):e.attachEvent&&e.attachEvent("on"+t,n)}function t(e){return window.localStorage&&localStorage.font_css_cache&&localStorage.font_css_cache_file===e}function n(){if(window.localStorage&&window.XMLHttpRequest)if(t(o))a(localStorage.font_css_cache);else{var n=new XMLHttpRequest;n.open("GET",o,!0),e(n,"load",function(){4===n.readyState&&(a(n.responseText),localStorage.font_css_cache=n.responseText,localStorage.font_css_cache_file=o)}),n.send()}else{var c=document.createElement("link");c.href=o,c.rel="stylesheet",c.type="text/css",document.getElementsByTagName("head")[0].appendChild(c),document.cookie="font_css_cache"}}function a(e){var t=document.createElement("style");t.innerHTML=e,document.getElementsByTagName("head")[0].appendChild(t)}var o="css/fonts.css";window.localStorage&&localStorage.font_css_cache||document.cookie.indexOf("font_css_cache")>-1?n():e(window,"load",n)}();</script>
   
     <!-- Load CSS Compilled without JS -->
   <noscript><link rel="stylesheet" href="css/main.css"></noscript>
@@ -27,7 +27,7 @@
    *{margin:0;padding:0;box-sizing:border-box}* .container{margin: 0;width:auto;text-align:left}* h1{width:auto;position:static;text-shadow:none; margin: auto; letter-spacing:0}* p{margin: auto;line-height:normal}* a:hover{text-decoration:none}* ul{margin:0 0}* li {width:auto;display:block;font-weight:normal}* .logo{margin-top:0}header{background:url(img/bg1.png) center center no-repeat;background-size:cover;padding-top:2.48em;padding-bottom:10.75em;width:100%}header .container{margin:0 auto;width:80%}header .container .logo{padding-top:.6em;float:left;color:#fff}header .container .logo .sp{border:.1em solid #fff;color:#22ddbc;font-weight:700;padding:.44em;margin-right:.71em}header .container .logo .platforms{cursor:pointer;font-weight:700}header .container .hd{margin-bottom:13.39em}header .container .hd:after{content:'';display:table;clear:both}header .container nav{float:right}header .container nav ul .listItem{display:inline-block;font-size:.83em;margin-right:1.19em}header .container nav ul .listItem:last-child{border:.044em solid #b8bbc4;border-radius:.5em;position:relative;color:#b8bbc4;padding:.67em 2.38em .67em .89em;margin-right:0}header .container nav ul .listItem:last-child:hover ul{display:block}header .container nav ul .listItem:last-child .subList{margin-top:-12px;position:absolute;left:50%;top:140%;transform:translate(-50%);display:none;border:1px solid #b8bbc4;border-radius:.5em}header .container nav ul .listItem:last-child .subList .subListItem{list-style:none;padding:5px 17px}header .container nav ul .listItem:last-child .subList .subListItem:first-child{border-top-left-radius:.5em;border-top-right-radius:.5em}header .container nav ul .listItem:last-child .subList .subListItem:last-child{border-bottom-left-radius:.5em;border-bottom-right-radius:.5em}header .container nav ul .listItem:last-child .subList .subListItem:hover{background-color:#000}header .container nav ul .listItem:last-child .subList .subListItem a{color:#b8bbc4;text-transform:capitalize}header .container nav ul .listItem:last-child:after{content:'';position:absolute;background:url(img/down-arrow.svg) center center no-repeat;background-size:100%;right:10%;top:56%;transform:translate(0,-50%);width:9px;height:3px}header .container nav ul .listItem:hover:not(:last-child){border-bottom:1px solid #22ddbc;cursor:pointer;color:#fff}header .container nav ul .listItem a{color:#b8bbc4;text-decoration:none}header .container nav ul .listItem a.active{border-bottom:1px solid #22ddbc;cursor:pointer;color:#fff}header .container .nav-trigger{position:absolute;clip:rect(0,0,0,0)}header .container label[for=nav-trigger]{position:fixed;left:-20px;top:-2px;z-index:2;height:40px;width:40px;cursor:pointer;background-size:contain;color:#fff;transform:rotate(90deg)}header .container .nav-trigger+label~nav{transition:left .2s}header .container .nav-trigger:checked+label{left:80px}header .container .nav-trigger:checked~nav{left:0}header .container .intro{text-align:center}header .container .intro h1{font-size:4.45em;color:#22ddbc;font-weight:700;margin-bottom:0.5em}header .container .intro .descr{color:#d6d6d9;font-size:.95em;margin-bottom:7.58em}header .container .intro .start,header .timeline .card .date{text-transform:uppercase;color:#fff}header .container .intro .start{font-size:.83em;border-bottom:.089em solid #22ddbc;display:inline-block;margin-bottom:13.5em;text-decoration:none}header .timeline{background:url(img/timeline.png) center no-repeat;height:250px;background-size:100%;font-size:.95em;position:relative;width:100%}header .timeline .card{position:absolute}header .timeline .june2016{top:0;left:7%}header .timeline .june2016 .descr{color:#28a895}header .timeline .july2020{top:67%;left:8.2%}header .timeline .july2020 .descr{color:#22ddbc}header .timeline .january2100{top:67%;left:25.7%}header .timeline .january2100 .descr{color:#48bdc0}header .timeline .august2300{top:67%;left:54.7%}header .timeline .august2300 .descr{color:#8a85c8}header .timeline .february2534{top:2%;left:77.4%}header .timeline .february2534 .descr{color:#bd59ce}@media only screen and (max-width:650px){header{padding-bottom:0}header .container nav{text-align:left;float:none;position:fixed;top:0;left:-100px;background-color:#000;height:100%;width:100px;z-index:1}header .container nav ul{padding:15px}header .container nav ul .listItem{display:block;margin-bottom:5px}header .container nav ul .listItem:last-child{border-radius:0;border:none;padding:0}header .container nav ul .listItem:last-child .subList{border:none}header .container nav ul .listItem:last-child:after{right:20%;top:54%;background-size:50%}header .container nav ul .listItem:last-child ul:before{display:none}header .container .logo{float:none}header .container .hd{text-align:center}header .container label{display:block}header .container .intro .start{margin-bottom:6em}header .timeline .june2016{top:27%}header .timeline .july2020{width:50px;top:55%}header .timeline .january2100{width:100px;top:57%;left:27%}header .timeline .august2300{top:57%}header .timeline .february2534{left:78%;top:11%}}@media only screen and (max-width:768px){header .timeline .june2016{top:17%}header .timeline .july2020{top:63%}}@media only screen and (max-width:992px){header .container nav ul .listItem:last-child:after{background-size:80%;top:50%}header .timeline .february2534{top:13%}}</style>
 </head>
 
-<body ontouchstart="">
+<body ontouchstart="" class="fade">
   <header>
     <div class="container">
       <div class="hd">
@@ -89,8 +89,13 @@
   </header>
   <section class="analytics">
     <p class="header">analytics</p>
-    <h2 class="descr">You should take a quick look <br> at our data</h2>
-    <p class="btnDescr">We want to show you how the process works. <br> Display data for:</p>
+    <div class="margin marginL">
+      <h2 class="descr">You should take a quick look <br> at our data</h2>
+    </div>
+    <div class="margin marginR">
+      <p class="btnDescr">We want to show you how the process works. <br> Display data for:</p>
+    </div>
+    
     <select name="monthList">
 <option value="october">october</option>
 <option value="november">november</option>
@@ -128,7 +133,7 @@
     <h4 class="header">product overview</h4>
     <p class="descr">This is something about <br> numbers</p>
     <p class="statDescr">Whale is the common name for various marine mammals <br> of the order Cetacea. The term whale sometimes refers to <br> all cetaceans, but more often it excludes.</p>
-    <ul>
+    <ul class="list">
       <li>Weight
         <div></div>
       </li>
@@ -156,7 +161,9 @@
 <option value="capacity">capacity</option>
 <option value="load">load</option>
 </select>
-      <img src="img/graph.png" alt="graph">
+     <div class="image">
+       <img src="img/graph.png" alt="graph">
+     </div>
       <ul>
         <li>weight</li>
         <li>economy</li>
