--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </a>
       </li>
       <li>
-        <a href="# ">
+        <a href="https://vsenatorrent.github.io/mogo/">
           <img src="img/w3.png" alt="work3">
           <div class="modal ">
             <span class="name">Mogo</span>
@@ -137,7 +137,7 @@
         </a>
       </li>
       <li>
-        <a href="# ">
+        <a href="#">
           <img src="img/w4.png" alt="work4">
           <div class="modal">
             <span class="name">Escape</span>
