--- a/mogo/index.html
+++ b/mogo/index.html
@@ -187,10 +187,10 @@
     <section class="design">
       <div class="container">
         <div class="row">
-          <h4 class="mx-auto">We work with</h4>
+          <h4 class="mx-auto">For all devices</h4>
         </div>
         <div class="row">
-          <h3 class="mx-auto">Amazing services</h3>
+          <h3 class="mx-auto">Unique design</h3>
         </div>
         <hr class="redHr">
         <div class="row justify-content-center imgBlock">
@@ -202,10 +202,10 @@
     <section class="whatWeDo">
       <div class="container">
         <div class="row">
-          <h4 class="mx-auto">We work with</h4>
+          <h4 class="mx-auto">Service</h4>
         </div>
         <div class="row">
-          <h3 class="mx-auto">Amazing services</h3>
+          <h3 class="mx-auto">What we do</h3>
         </div>
         <hr class="redHr">
       </div>
@@ -385,10 +385,10 @@
 <section class="say">
 <div class="container">
   <div class="row">
-    <h4 class="mx-auto">We work with</h4>
+    <h4 class="mx-auto">Happy client</h4>
   </div>
   <div class="row">
-    <h3 class="mx-auto">Amazing services</h3>
+    <h3 class="mx-auto">What people say</h3>
   </div>
   <hr class="redHrMid">
   <div class="row mb-4">
